engine/crates/engine-v2/query-planning/src/tests/snapshots/engine_v2_query_planning__tests__entities__nested_join-graph.snap
---
source: engine/crates/engine-v2/query-planning/src/tests/entities.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"stars\" ]\n    2 [ label = \"reviews\" ]\n    3 [ label = \"products\" ]\n    4 [ label = \"Root#category\", shape=box, color=blue ]\n    5 [ label = \"products@Root#category\", shape=box, style=dashed, color=blue ]\n    6 [ label = \"Root#name\", shape=box, color=blue ]\n    7 [ label = \"products@Root#name\", shape=box, style=dashed, color=blue ]\n    8 [ label = \"Root#price\", shape=box, color=blue ]\n    9 [ label = \"products@Root#price\", shape=box, style=dashed, color=blue ]\n    10 [ label = \"FedEntity#review\", shape=box, color=blue ]\n    11 [ label = \"reviews@FedEntity#review\", shape=box, style=dashed, color=blue ]\n    12 [ label = \"stars@FedEntity#review\", shape=box, style=dashed, color=blue ]\n    13 [ label = \"*id\" ]\n    14 [ label = \"id@Root#category\", shape=box, style=dashed, color=blue ]\n    15 [ label = \"id@Root#name\", shape=box, style=dashed, color=blue ]\n    16 [ label = \"id@Root#price\", shape=box, style=dashed, color=blue ]\n    0 -> 3 [ label = \"\" ]\n    0 -> 4 [ label = <<b>1</b>>, color=blue,fontcolor=blue ]\n    0 -> 4 [ label = \"\", style=dashed ]\n    4 -> 5 [ label = \"\", color=blue,fontcolor=blue ]\n    5 -> 3 [ label = \"\", color=turquoise ]\n    0 -> 6 [ label = <<b>1</b>>, color=blue,fontcolor=blue ]\n    0 -> 6 [ label = \"\", style=dashed ]\n    6 -> 7 [ label = \"\", color=blue,fontcolor=blue ]\n    7 -> 3 [ label = \"\", color=turquoise ]\n    0 -> 8 [ label = <<b>1</b>>, color=blue,fontcolor=blue ]\n    0 -> 8 [ label = \"\", style=dashed ]\n    8 -> 9 [ label = \"\", color=blue,fontcolor=blue ]\n    9 -> 3 [ label = \"\", color=turquoise ]\n    3 -> 2 [ label = \"\" ]\n    9 -> 10 [ label = <<b>1</b>>, color=blue,fontcolor=blue ]\n    3 -> 10 [ label = \"\", style=dashed ]\n    10 -> 11 [ label = \"\", color=blue,fontcolor=blue ]\n    11 -> 2 [ label = \"\", color=turquoise ]\n    2 -> 1 [ label = \"\" ]\n    11 -> 12 [ label = \"\", color=blue,fontcolor=blue ]\n    12 -> 1 [ label = \"\", color=turquoise ]\n    7 -> 10 [ label = <<b>1</b>>, color=blue,fontcolor=blue ]\n    5 -> 10 [ label = <<b>1</b>>, color=blue,fontcolor=blue ]\n    10 -> 13 [ label = \"\", color=orange ]\n    3 -> 13 [ label = \"\" ]\n    5 -> 14 [ label = \"\", color=blue,fontcolor=blue ]\n    14 -> 13 [ label = \"\", color=turquoise ]\n    7 -> 15 [ label = \"\", color=blue,fontcolor=blue ]\n    15 -> 13 [ label = \"\", color=turquoise ]\n    9 -> 16 [ label = \"\", color=blue,fontcolor=blue ]\n    16 -> 13 [ label = \"\", color=turquoise ]\n}\n"
---
digraph {
    0 [ root]
    1 [ stars]
    2 [ reviews]
    3 [ products]
    4 [ Root#category]
    5 [ products@Root#category]
    6 [ Root#name]
    7 [ products@Root#name]
    8 [ Root#price]
    9 [ products@Root#price]
    10 [ FedEntity#review]
    11 [ reviews@FedEntity#review]
    12 [ stars@FedEntity#review]
    13 [ *id]
    14 [ id@Root#category]
    15 [ id@Root#name]
    16 [ id@Root#price]
    0 -> 3 [ label = "Field" ]
    0 -> 4 [ label = "CreateChildResolver", cost=1 ]
    0 -> 4 [ label = "HasChildResolver" ]
    4 -> 5 [ label = "CanProvide", cost=0 ]
    5 -> 3 [ label = "Provides" ]
    0 -> 6 [ label = "CreateChildResolver", cost=1 ]
    0 -> 6 [ label = "HasChildResolver" ]
    6 -> 7 [ label = "CanProvide", cost=0 ]
    7 -> 3 [ label = "Provides" ]
    0 -> 8 [ label = "CreateChildResolver", cost=1 ]
    0 -> 8 [ label = "HasChildResolver" ]
    8 -> 9 [ label = "CanProvide", cost=0 ]
    9 -> 3 [ label = "Provides" ]
    3 -> 2 [ label = "Field" ]
    9 -> 10 [ label = "CreateChildResolver", cost=1 ]
    3 -> 10 [ label = "HasChildResolver" ]
    10 -> 11 [ label = "CanProvide", cost=0 ]
    11 -> 2 [ label = "Provides" ]
    2 -> 1 [ label = "Field" ]
    11 -> 12 [ label = "CanProvide", cost=0 ]
    12 -> 1 [ label = "Provides" ]
    7 -> 10 [ label = "CreateChildResolver", cost=1 ]
    5 -> 10 [ label = "CreateChildResolver", cost=1 ]
    10 -> 13 [ label = "Requires" ]
    3 -> 13 [ label = "Field" ]
    5 -> 14 [ label = "CanProvide", cost=0 ]
    14 -> 13 [ label = "Provides" ]
    7 -> 15 [ label = "CanProvide", cost=0 ]
    15 -> 13 [ label = "Provides" ]
    9 -> 16 [ label = "CanProvide", cost=0 ]
    16 -> 13 [ label = "Provides" ]
}
