engine/crates/engine-v2/query-planning/src/tests/snapshots/engine_v2_query_planning__tests__entities__nested_join-solved-graph.snap
---
source: engine/crates/engine-v2/query-planning/src/tests/entities.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"stars\" ]\n    4 [ label = \"Root#category\", shape=parallelogram, color=dodgerblue ]\n    5 [ label = \"products@Root#category\", shape=box, color=dodgerblue ]\n    10 [ label = \"FedEntity#review\", shape=parallelogram, color=dodgerblue ]\n    11 [ label = \"reviews@FedEntity#review\", shape=box, color=dodgerblue ]\n    12 [ label = \"stars@FedEntity#review\", shape=box, color=dodgerblue ]\n    13 [ label = \"*id\" ]\n    14 [ label = \"id@Root#category\", shape=box, color=dodgerblue ]\n    0 -> 4 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 4 [ label = \"\", style=dashed,arrowhead=none ]\n    4 -> 5 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    10 -> 11 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    11 -> 12 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    12 -> 1 [ label = \"\", color=violet,arrowhead=none ]\n    5 -> 10 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    10 -> 13 [ label = \"\", color=orangered,arrowhead=inv ]\n    5 -> 14 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    14 -> 13 [ label = \"\", color=violet,arrowhead=none ]\n}\n"
---
digraph {
    0 [ root]
    1 [ stars]
    4 [ Root#category]
    5 [ products@Root#category]
    10 [ FedEntity#review]
    11 [ reviews@FedEntity#review]
    12 [ stars@FedEntity#review]
    13 [ *id]
    14 [ id@Root#category]
    0 -> 4 [ label = "CreateChildResolver" ]
    0 -> 4 [ label = "HasChildResolver" ]
    4 -> 5 [ label = "CanProvide" ]
    10 -> 11 [ label = "CanProvide" ]
    11 -> 12 [ label = "CanProvide" ]
    12 -> 1 [ label = "Provides" ]
    5 -> 10 [ label = "CreateChildResolver" ]
    10 -> 13 [ label = "Requires" ]
    5 -> 14 [ label = "CanProvide" ]
    14 -> 13 [ label = "Provides" ]
}
