engine/crates/engine-v2/query-planning/src/tests/snapshots/engine_v2_query_planning__tests__entities__nested_join-solver.snap
---
source: engine/crates/engine-v2/query-planning/src/tests/entities.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"stars\", style=dashed ]\n    2 [ label = \"Root#category\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    3 [ label = \"products@Root#category\", shape=box, color=dodgerblue, style=dashed ]\n    4 [ label = \"Root#name\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    5 [ label = \"products@Root#name\", shape=box, color=dodgerblue, style=dashed ]\n    6 [ label = \"Root#price\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    7 [ label = \"products@Root#price\", shape=box, color=dodgerblue, style=dashed ]\n    8 [ label = \"FedEntity#review\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    9 [ label = \"reviews@FedEntity#review\", shape=box, color=dodgerblue, style=dashed ]\n    10 [ label = \"stars@FedEntity#review\", shape=box, color=dodgerblue, style=dashed ]\n    11 [ label = \"*id\", style=dashed ]\n    12 [ label = \"id@Root#category\", shape=box, color=dodgerblue, style=dashed ]\n    13 [ label = \"id@Root#name\", shape=box, color=dodgerblue, style=dashed ]\n    14 [ label = \"id@Root#price\", shape=box, color=dodgerblue, style=dashed ]\n    15 [ label=\"\", style=dashed]\n    0 -> 2 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    2 -> 3 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    0 -> 4 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    4 -> 5 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    0 -> 6 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    6 -> 7 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    7 -> 8 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    8 -> 9 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    9 -> 10 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    10 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    5 -> 8 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    3 -> 8 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    3 -> 12 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    12 -> 11 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    5 -> 13 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    13 -> 11 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    7 -> 14 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    14 -> 11 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    15 -> 0 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "stars", steiner=0 ]
    2 [ label = "Root#category", steiner=0 ]
    3 [ label = "products@Root#category", steiner=0 ]
    4 [ label = "Root#name", steiner=0 ]
    5 [ label = "products@Root#name", steiner=0 ]
    6 [ label = "Root#price", steiner=0 ]
    7 [ label = "products@Root#price", steiner=0 ]
    8 [ label = "FedEntity#review", steiner=0 ]
    9 [ label = "reviews@FedEntity#review", steiner=0 ]
    10 [ label = "stars@FedEntity#review", steiner=0 ]
    11 [ label = "*id", steiner=0 ]
    12 [ label = "id@Root#category", steiner=0 ]
    13 [ label = "id@Root#name", steiner=0 ]
    14 [ label = "id@Root#price", steiner=0 ]
    15 [ label="", style=dashed]
    0 -> 2 [ cost=1, steiner=0]
    2 -> 3 [ cost=0, steiner=0]
    0 -> 4 [ cost=1, steiner=0]
    4 -> 5 [ cost=0, steiner=0]
    0 -> 6 [ cost=1, steiner=0]
    6 -> 7 [ cost=0, steiner=0]
    7 -> 8 [ cost=1, steiner=0]
    8 -> 9 [ cost=0, steiner=0]
    9 -> 10 [ cost=0, steiner=0]
    10 -> 1 [ cost=0, steiner=0]
    5 -> 8 [ cost=1, steiner=0]
    3 -> 8 [ cost=1, steiner=0]
    3 -> 12 [ cost=0, steiner=0]
    12 -> 11 [ cost=0, steiner=0]
    5 -> 13 [ cost=0, steiner=0]
    13 -> 11 [ cost=0, steiner=0]
    7 -> 14 [ cost=0, steiner=0]
    14 -> 11 [ cost=0, steiner=0]
    15 -> 0 [ cost=0, steiner=0]
}
