engine/crates/engine-v2/query-planning/src/tests/snapshots/engine_v2_query_planning__tests__entities__single_field-graph.snap
---
source: engine/crates/engine-v2/query-planning/src/tests/entities.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"price\" ]\n    2 [ label = \"products\" ]\n    3 [ label = \"Root#category\", shape=box, color=blue ]\n    4 [ label = \"products@Root#category\", shape=box, style=dashed, color=blue ]\n    5 [ label = \"Root#name\", shape=box, color=blue ]\n    6 [ label = \"products@Root#name\", shape=box, style=dashed, color=blue ]\n    7 [ label = \"Root#price\", shape=box, color=blue ]\n    8 [ label = \"products@Root#price\", shape=box, style=dashed, color=blue ]\n    9 [ label = \"price@Root#price\", shape=box, style=dashed, color=blue ]\n    10 [ label = \"FedEntity#price\", shape=box, color=blue ]\n    11 [ label = \"price@FedEntity#price\", shape=box, style=dashed, color=blue ]\n    12 [ label = \"*id\" ]\n    13 [ label = \"id@Root#category\", shape=box, style=dashed, color=blue ]\n    14 [ label = \"id@Root#name\", shape=box, style=dashed, color=blue ]\n    15 [ label = \"id@Root#price\", shape=box, style=dashed, color=blue ]\n    0 -> 2 [ label = \"\" ]\n    0 -> 3 [ label = <<b>1</b>>, color=blue,fontcolor=blue ]\n    0 -> 3 [ label = \"\", style=dashed ]\n    3 -> 4 [ label = \"\", color=blue,fontcolor=blue ]\n    4 -> 2 [ label = \"\", color=turquoise ]\n    0 -> 5 [ label = <<b>1</b>>, color=blue,fontcolor=blue ]\n    0 -> 5 [ label = \"\", style=dashed ]\n    5 -> 6 [ label = \"\", color=blue,fontcolor=blue ]\n    6 -> 2 [ label = \"\", color=turquoise ]\n    0 -> 7 [ label = <<b>1</b>>, color=blue,fontcolor=blue ]\n    0 -> 7 [ label = \"\", style=dashed ]\n    7 -> 8 [ label = \"\", color=blue,fontcolor=blue ]\n    8 -> 2 [ label = \"\", color=turquoise ]\n    2 -> 1 [ label = \"\" ]\n    8 -> 9 [ label = \"\", color=blue,fontcolor=blue ]\n    9 -> 1 [ label = \"\", color=turquoise ]\n    6 -> 10 [ label = <<b>1</b>>, color=blue,fontcolor=blue ]\n    2 -> 10 [ label = \"\", style=dashed ]\n    10 -> 11 [ label = \"\", color=blue,fontcolor=blue ]\n    11 -> 1 [ label = \"\", color=turquoise ]\n    4 -> 10 [ label = <<b>1</b>>, color=blue,fontcolor=blue ]\n    10 -> 12 [ label = \"\", color=orange ]\n    2 -> 12 [ label = \"\" ]\n    4 -> 13 [ label = \"\", color=blue,fontcolor=blue ]\n    13 -> 12 [ label = \"\", color=turquoise ]\n    6 -> 14 [ label = \"\", color=blue,fontcolor=blue ]\n    14 -> 12 [ label = \"\", color=turquoise ]\n    8 -> 15 [ label = \"\", color=blue,fontcolor=blue ]\n    15 -> 12 [ label = \"\", color=turquoise ]\n}\n"
---
digraph {
    0 [ root]
    1 [ price]
    2 [ products]
    3 [ Root#category]
    4 [ products@Root#category]
    5 [ Root#name]
    6 [ products@Root#name]
    7 [ Root#price]
    8 [ products@Root#price]
    9 [ price@Root#price]
    10 [ FedEntity#price]
    11 [ price@FedEntity#price]
    12 [ *id]
    13 [ id@Root#category]
    14 [ id@Root#name]
    15 [ id@Root#price]
    0 -> 2 [ label = "Field" ]
    0 -> 3 [ label = "CreateChildResolver", cost=1 ]
    0 -> 3 [ label = "HasChildResolver" ]
    3 -> 4 [ label = "CanProvide", cost=0 ]
    4 -> 2 [ label = "Provides" ]
    0 -> 5 [ label = "CreateChildResolver", cost=1 ]
    0 -> 5 [ label = "HasChildResolver" ]
    5 -> 6 [ label = "CanProvide", cost=0 ]
    6 -> 2 [ label = "Provides" ]
    0 -> 7 [ label = "CreateChildResolver", cost=1 ]
    0 -> 7 [ label = "HasChildResolver" ]
    7 -> 8 [ label = "CanProvide", cost=0 ]
    8 -> 2 [ label = "Provides" ]
    2 -> 1 [ label = "Field" ]
    8 -> 9 [ label = "CanProvide", cost=0 ]
    9 -> 1 [ label = "Provides" ]
    6 -> 10 [ label = "CreateChildResolver", cost=1 ]
    2 -> 10 [ label = "HasChildResolver" ]
    10 -> 11 [ label = "CanProvide", cost=0 ]
    11 -> 1 [ label = "Provides" ]
    4 -> 10 [ label = "CreateChildResolver", cost=1 ]
    10 -> 12 [ label = "Requires" ]
    2 -> 12 [ label = "Field" ]
    4 -> 13 [ label = "CanProvide", cost=0 ]
    13 -> 12 [ label = "Provides" ]
    6 -> 14 [ label = "CanProvide", cost=0 ]
    14 -> 12 [ label = "Provides" ]
    8 -> 15 [ label = "CanProvide", cost=0 ]
    15 -> 12 [ label = "Provides" ]
}
